--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 !/.projen/deps.json
 !/.projen/files.json
 !/.github/workflows/pull-request-lint.yml
+!/.github/workflows/auto-approve.yml
 !/package.json
 !/LICENSE
 !/.npmignore
@@ -49,4 +50,14 @@ junit.xml
 /cdk.out/
 .cdk.staging/
 .parcel-cache/
+docker-compose.yaml
+cdk.out
+cdk.context.json
+yarn-error.log
+dependabot.yml
+.DS_Store
+.env
+**/dist/**
+config.json
+cdk-nag-output.txt
 !/.projenrc.ts
