--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^6",
     "@typescript-eslint/parser": "^6",
-    "aws-cdk": "^2.1.0",
+    "aws-cdk": "^2.141.0",
+    "cdk-nag": "^2.28.117",
     "esbuild": "^0.21.3",
     "eslint": "^8",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -41,10 +42,10 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.1.0",
+    "aws-cdk-lib": "^2.141.0",
     "constructs": "^10.0.5"
   },
-  "license": "Apache-2.0",
+  "license": "MIT-0",
   "version": "0.0.0",
   "jest": {
     "testMatch": [
